TestSuite/errors/err0073.pas
  	 type TValueType = class(System.ValueType)
end;

begin

end.